crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_enum_variant_one_must_occur_distinct_types.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for TextDecoration {
    #[inline(always)]
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        (<Ident>::peek(p, c) && (p.equals_atom(c.into(), &FooAtoms::Underline)))
            || <DecorationStyle>::peek(p, c) || <Color>::peek(p, c)
    }
}
