crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_enum_with_different_types.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
snapshot_kind: text
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Value {
    const PEEK_KINDSET: ::css_lexer::KindSet = ::css_lexer::KindSet::new(
        &[::css_lexer::Kind::Ident],
    );
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        c == Self::PEEK_KINDSET || <Length>::peek(p, c) || <Percentage>::peek(p, c)
    }
}
