crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_enum_with_lifetime.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for CssValue<'a> {
    const PEEK_KINDSET: ::css_lexer::KindSet = ::css_lexer::KindSet::new(
        &[::css_lexer::Kind::Ident, ::css_lexer::Kind::String],
    );
    #[inline(always)]
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        c == Self::PEEK_KINDSET || <Length>::peek(p, c)
    }
}
