crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_enum_with_range.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for OpacityValue {
    fn peek<I>(p: &::css_parse::Parser<'a, I>, c: ::css_parse::Cursor) -> bool
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use ::css_parse::Peek;
        (<Number>::peek(p, c) && (0.0..=1.0).contains(&c.token().value()))
            || (<Percentage>::peek(p, c) && (0.0..=100.0).contains(&c.token().value()))
    }
}
