crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_peek__peek_enum_with_struct_variants.snap
---
source: crates/csskit_derives/src/test/test_peek.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for BorderStyle {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_parse::Cursor) -> bool {
        use ::css_parse::Peek;
        <Length>::peek(p, c) || <Length>::peek(p, c)
    }
}
